[project]
name = "comfyui_dynamic"
description = "Adds Python script execution and quality-of-life nodes to ComfyUI."
version = "v0.0.2"
license = { file = "LICENSE.md" }
dependencies = []
classifiers = ["Operating System :: OS Independent"]

[project.urls]
Repository = "https://github.com/inkbottle-9/comfyui_dynamic"
Documentation = "https://github.com/inkbottle-9/comfyui_dynamic/wiki"
"Bug Tracker" = "https://github.com/inkbottle-9/comfyui_dynamic/issues"

[tool.comfy]
PublisherId = "inkbottle-9"
DisplayName = "Dynamic Python Script Executor (interpreter)"
Icon = "https://raw.githubusercontent.com/inkbottle-9/comfyui_dynamic/refs/heads/main/icon/logo__comfy_dynamic.png"
Banner = "https://raw.githubusercontent.com/inkbottle-9/comfyui_dynamic/refs/heads/main/icon/logo__comfy_dynamic__banner.png"
